<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBack"
    android:orientation="vertical"
    tools:context=".activity.OrdersActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorMainWhite"
        app:title="@string/order_title"
        app:titleTextColor="@color/colorMainBlack"
        app:menu="@menu/menu_order"
        app:navigationIcon="@drawable/ic_arrow_left_black"
        android:elevation="5dp" />

    <ListView
        android:id="@+id/lst_order"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="0dp"
        android:divider="@null"/>

    <LinearLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/green_12"
        android:gravity="center"
        android:onClick="onClickPrintUB">

        <TextView
            style="@style/txt.18.white"
            android:textStyle="bold"
            android:text="@string/order_print"/>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/green_12"
        android:gravity="center"
        android:onClick="onClickRouteUB">

        <TextView
            style="@style/txt.18.white"
            android:textStyle="bold"
            android:text="@string/order_route"/>
    </LinearLayout>

</LinearLayout>