<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorMainBack"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorMainWhite"
        app:title=""
        app:titleTextColor="@color/colorMainBlack"
        app:navigationIcon="@drawable/ic_logo"
        android:elevation="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/green_12"
        android:gravity="center"
        android:onClick="onClickRouteLlt">

        <TextView
            style="@style/txt.18.white"
            android:textStyle="bold"
            android:text="@string/main_route"/>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/green_12"
        android:gravity="center"
        android:onClick="onClickRoosterLlt">

        <TextView
            style="@style/txt.18.white"
            android:textStyle="bold"
            android:text="@string/main_rooster"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llt_main_manager"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/green_12"
        android:gravity="center"
        android:onClick="onClickCheckList">

        <TextView
            style="@style/txt.18.white"
            android:textStyle="bold"
            android:text="@string/main_checklist"/>
    </LinearLayout>

</LinearLayout>