<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_marginTop="45dp"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/llt_txt_4"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_phone_black"/>

        <LinearLayout
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorMainBlack"/>

        <EditText
            android:id="@+id/txt_login_phone"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/hint_phone"
            android:inputType="number"
            android:digits="0123456789"
            android:textSize="14dp"
            android:background="@null" />

        <Button
            android:layout_marginEnd="8dp"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:background="@drawable/green_12"
            android:text="@string/login_verify"
            android:textColor="@color/colorMainWhite"
            android:textAllCaps="false"
            android:onClick="onClickVerifyUB"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/llt_txt_4"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_code_black"/>

        <LinearLayout
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorMainBlack"/>

        <EditText
            android:id="@+id/txt_login_code"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/login_verify_code"
            android:inputType="number"
            android:digits="0123456789"
            android:textSize="14dp"
            android:background="@null" />

        <TextView
            android:id="@+id/lbl_login_counter"
            android:layout_marginEnd="8dp"
            style="@style/txt.16.black"
            android:text="60 s"/>

    </LinearLayout>

    <Button
        android:layout_marginTop="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/login"
        android:textColor="@color/colorMainWhite"
        android:textSize="20dp"
        android:onClick="onClickLogin"
        android:background="@drawable/green_12"/>

</LinearLayout>