<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBack"
    android:orientation="vertical"
    tools:context=".activity.OrderDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorMainWhite"
        app:title="@string/order_detail_title"
        app:titleTextColor="@color/colorMainBlack"
        app:navigationIcon="@drawable/ic_arrow_left_black"
        app:menu="@menu/menu_order"
        android:elevation="5dp" />

    <RelativeLayout
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/white_4"
        android:elevation="2dp">

        <fragment
            android:id="@+id/frg_order_detail_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/llt_router_info"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_op_4"
            android:elevation="2dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginStart="8dp"
                    style="@style/txt.16.white"
                    android:text="@string/distance"/>

                <TextView
                    android:id="@+id/lbl_order_distance"
                    android:layout_marginStart="4dp"
                    style="@style/txt.16.white"
                    android:text="\??? Km"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginStart="8dp"
                    style="@style/txt.16.white"
                    android:text="@string/time"/>

                <TextView
                    android:id="@+id/lbl_order_delay"
                    android:layout_marginStart="4dp"
                    style="@style/txt.16.white"
                    android:text="\?? min"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/lbl_miss_order"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_below="@id/llt_router_info"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:lines="1"
            android:text="Missing Orders: "
            android:textColor="@color/colorMainWhite"
            android:textSize="@dimen/report_feedback_padding_16"
            android:gravity="center_vertical"
            android:background="@drawable/white_op_4"/>

        <ImageView
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:padding="8dp"
            android:layout_alignParentBottom="true"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_circle"
            android:src="@drawable/ic_play_arrow_white"
            android:onClick="onClickSendMessage"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/lst_order_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25"
        android:dividerHeight="0dp"
        android:divider="@null"/>

</LinearLayout>